--- a/src/pages/Dashboard/KeywordIntelDashboard.css
+++ b/src/pages/Dashboard/KeywordIntelDashboard.css
@@ -1787,6 +1787,7 @@
 
 .MuiBox-root .MuiGrid-container {
   align-items: flex-end !important;
+  justify-content: space-evenly !important;
 }
 
 /* Enhance button group in filters */
